fixed fleeing sidebar on mobile devices

--- a/www/themes/basic/css/base.less
+++ b/www/themes/basic/css/base.less
@@ -55,8 +55,11 @@ button:hover { .clean-gray_hover; }
 button:active { .clean-gray_active; }
 
 header {
-  border-left: 0.1rem solid @elementBorder;
-  float: right;
+  background-color: rgba(255,255,255,0.75);;
+  border-width: 0 0 0 0.1rem;
+  border-left: solid @elementBorder;
+  /*float: right;*/
+  right: 0;
   height: 95%;
   margin-top: 1.5%;
   position: fixed;
